# keypirinha-thino

./: .gitignore  LICENSE  README.md  make.cmd  memo.md  pyproject.toml
src/: thino.ini  thino.py
tests/: __init__.py  test_helpers.py  test_thino.py  thino_test.ini
tests/stubs/: keypirinha.py  keypirinha_util.py
